<resources>
    <string name="app_name">Tickets</string>
    <string name="title_routes">Маршруты</string>
    <string name="title_tours">Туры</string>
    <string name="title_cabinet">Кабинет</string>
    <string name="fragment_routes_text_from">Откуда</string>
    <string name="fragment_routes_text_to">Куда</string>
    <string name="fragment_routes_text_forward">Туда</string>
    <string name="fragment_routes_text_back">Обратно</string>
    <string name="fragment_routes_text_count">Количество пассажиров</string>
    <string name="fragment_routes_find_button">Найти билеты</string>
    <string name="dialog_routes_search_text_input_placeholder">Город или станция</string>
    <string name="dialog_routes_subtitle">Города и станции</string>
    <string name="title_search">Выберите места</string>
    <string name="fragment_search_continue_button">Выбрать места</string>
    <string name="fragment_search_seat_available">Свободное</string>
    <string name="fragment_search_seat_selected">Выбранное</string>
    <string name="fragment_search_seat_occupied">Занятое</string>
</resources>