<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_routes">

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.tickets.ui.routes.RoutesFormFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" />

    <fragment
        android:id="@+id/navigation_tours"
        android:name="com.tickets.ui.tours.ToursFragment"
        android:label="@string/title_tours"
        tools:layout="@layout/fragment_tours" />

    <fragment
        android:id="@+id/navigation_cabinet"
        android:name="com.tickets.ui.cabinet.CabinetFragment"
        android:label="@string/title_cabinet"
        tools:layout="@layout/fragment_cabinet" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.tickets.ui.routes.RoutesSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
</navigation>