<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cabinet.CabinetFragment"
    android:background="?attr/windowBackgroundPale">

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recycle_card_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:paddingVertical="@dimen/spacing_2xl"-->
<!--        tools:listitem="@layout/item_card" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:background="?attr/windowBackground"
        android:id="@+id/search_info_box">

        <LinearLayout
            app:layout_constraintBottom_toTopOf="@id/button_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <com.tickets.widgets.SeatCheckboxView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="4dp"
                android:enabled="false"
                app:state="0"
                app:scale="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_md"
                android:text="@string/fragment_search_seat_available" />

            <com.tickets.widgets.SeatCheckboxView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="4dp"
                android:enabled="false"
                app:state="1"
                app:scale="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_md"
                android:text="@string/fragment_search_seat_selected" />

            <com.tickets.widgets.SeatCheckboxView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="4dp"
                android:enabled="false"
                app:state="-1"
                app:scale="false"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_search_seat_occupied" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2xl"
            android:layout_marginBottom="@dimen/spacing_md"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.04"
            android:minHeight="68dp"
            android:text="@string/fragment_search_continue_button"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_base"
            android:textStyle="normal"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_info_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search_seats_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="1" />

                <TextView
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="3" />

                <TextView
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="A"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="B"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="C"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="D"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="E"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    app:state="-1"
                    app:scale="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2xl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="F"
                    android:textSize="20sp" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />

                <com.tickets.widgets.SeatCheckboxView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    app:state="0"
                    app:scale="true" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>